Lag OppdaterForespørselTask etter at vi har utledet hvilke forespørsler som skal oppdateres